# eee586

./: .gitattributes  .gitignore  README.md  adj_eff.py  dataset_trial.py  gnn_models.py  gnn_train.py  gnn_train_utils.py  gnn_trial.py  pyproject.toml  word_embedding.py
eee586/: __init__.py  __main__.py  pretrain.py  utils.py  word_embedding.py
eee586/utils/: adjacency.py  generic.py
gnn/: gnn_trial.py
papers/: README.md
pkl/SetFit_20_newsgroups/distilbert-base-uncased/: test_token.pkl  train_token.pkl  train_token_enc.pkl
pkl/SetFit_20_newsgroups/distilbert-base-uncased/maxlen2048_batchsize1/: test_doc_embeddings.pkl  train_doc_embeddings.pkl
pkl/SetFit_20_newsgroups/distilbert-base-uncased/maxlen2048_batchsize1/wo_stop/: test_doc_embeddings.pkl  train_doc_embeddings.pkl
pkl/SetFit_20_newsgroups/distilbert-base-uncased/wo_stop/: test_token_enc.pkl  train_token_enc.pkl
pkl/distilbert-base-uncased/SetFit_20_newsgroups/: test_token_enc.pkl
proposal/: bibliography.bib  proposal.tex
report/: abstract.tex  appendix.tex  bibliography.bib  discussion.tex  intro.tex  localSettings.yaml  main.tex  methods.tex  related.tex  results.tex
report/img/: architecture.eps
survey/: bibliography.bib  intro.tex  main.tex  previous.tex  related.tex
tests/: test_version.py
